docs/v7.1.3/classes/E77.md
---
layout: page
title: E77 Entité persistante
titleEn: E77 Persistent Item - Entité persistante
permalink: /v7.1.3/classes/E77
sidebar: v713
group: classes
date: 2024-08-28
---

**Date de création** : 2024-08-28

**Dernière mise à jour** : 2024-08-28

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E1 CRM Entity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code></p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
<p>E39 Actor</p>
<p>E70 Thing</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E39_Actant</code></p>
<p><code class="language-plaintext highlighter-rouge">E70_Chose</code><code class="language-plaintext highlighter-rouge"></code></p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises items that have persistent characteristics of structural nature substantially related to their identity and their integrity, sometimes known as “endurants” in philosophy. Persistent Items may be physical entities, such as people, animals or things, conceptual entities such as ideas, concepts, products of the imagination or even names. </p>
<p>Instances of E77 Persistent Item may be present or be part of interactions in different periods or events. They can repeatedly be recognized at disparate occasions during their existence by characteristics of structural nature. The respective characteristics need not be exactly the same during all the existence of an instance of E77 Persistent Item. Often, they undergo gradual change, still bearing some similarities with that of previous times, or disappear completely and new emerge. For instance, a person, from the time of being born on, will gradually change all its features and acquire new ones, such as a scar. Even the DNA in different body cells will develop defects and mutations. Nevertheless, relevant characteristics used should be sufficiently similar to recognize the instance for some substantial period of time. </p>
<p>The more specific criteria that determine the identity of instances of subclasses of E77 Persistent Item may vary considerably and are described or referred to in the respective scope notes. The decision about which exact criteria to use depends on whether the observable behaviour of the respective part of reality such confined conforms to the reasoning the user is interested in. For example, a building can be regarded as no longer existing if it is dismantled and the materials reused in a different configuration. On the other hand, human beings go through radical and profound changes during their life-span, affecting both material composition and form, yet preserve their identity by other criteria, such as being bodily separated from other persons. Similarly, inanimate objects may be subject to exchange of parts and matter. On the opposite, the identity of a (version of a) text of a scientific publication is given by the exact arrangement of its relevant symbols. </p>
<p>The main classes of objects that fall outside the scope of the E77 Persistent Item class are temporal objects such as periods, events and acts, and descriptive properties. </p>
<p>An instance of E77 Persistent Item does not require actual knowledge of the identifying features of the instance being currently known. There may be cases, where the actual identifying features of an instance of E77 Persistent Item are not decidable at a particular state of knowledge. </p>
</td>
<td>
<p>Cette classe comprend les entités qui possèdent des caractéristiques structurelles persistantes liées à leur identité et à leur intégrité, parfois désignées par le terme « endurants » en philosophie. Les entités persistantes peuvent être matérielles, comme des êtres humains, des animaux ou des choses, ou conceptuelles, comme des idées, des concepts, des produits de l’imagination ou même des noms.</p>
<p>Les instances de <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code> peuvent être présentes ou faire partie d’interactions au cours de différentes périodes ou évènements. Elles peuvent être identifiées à maintes reprises à divers moments de leur existence par leurs caractéristiques structurelles. Ces dernières n’ont pas besoin d’être exactement les mêmes tout au long de l’existence d’une instance de <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code>. Souvent, les instances de <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code> subissent des changements progressifs, tout en conservant certaines similarités avec leurs états précédents, ou bien [n.d.t. certaines caractéristiques] disparaissent complètement tandis que de nouvelles émergent. Par exemple, les traits d’une personne, à compter du jour de sa naissance, changeront graduellement et de nouvelles caractéristiques apparaîtront, comme une cicatrice. Même l’ADN des cellules de différents corps peut développer des anomalies et des mutations. Cependant, les caractéristiques pertinentes sont généralement suffisamment semblables pour qu’il soit possible de reconnaître une instance au cours d’une longue période de temps.</p>
<p>Les critères les plus spécifiques déterminant l’identité des instances des sous-classes de <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code> peuvent considérablement varier et sont décrits ou désignés dans les notes d’application correspondantes. Le choix du critère exact à utiliser [n.d.t. pour déterminer la sous-classe la plus appropriée] dépend de la correspondance entre, d’une part, le comportement observé dans la réalité [n.d.t. et documenté] et, d’autre part, les raisonnements que souhaite y appliquer l’utilisateur.</p>
<p>Par exemple, on peut considérer qu’un édifice n’existe plus s’il est démantelé et que les matériaux sont réutilisés dans une configuration différente. D’un autre côté, les êtres humains traversent des changements profonds et radicaux pendant leur vie, lesquels affectent à la fois leur aspect et leur composition matérielle; ils conservent cependant leur identité en raison d’autres critères, comme le fait d’être physiquement distincts d’autres êtres humains. De la même façon, des objets inanimés peuvent être sujets à des échanges de parties ou de matière. Au contraire, l’identité d’une version précise d’un texte scientifique relève de l’arrangement exact et signifiant de ses symboles.</p>
<p>Les principales classes d’objets qui sortent du champ d’application de la classe <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code> sont les objets temporels, comme les périodes, les évènements et les actions, ainsi que les propriétés descriptives.</p>
<p>Une instance de <code class="language-plaintext highlighter-rouge">E77_Entité_persistante</code> peut exister sans que soient actuellement connues les caractéristiques qui la définissent. Il existe certains cas où ces caractéristiques ne peuvent pas être identifiées en raison de l’état des connaissances à un moment précis.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Leonardo da Vinci (E21) (Strano, 1953)</p>
</li>
<li><p>Stonehenge (E24) (Pryor, 2016)</p>
</li>
<li><p>the hole in the ozone layer (E4) (Hufford and Horwitz, 2005)</p>
</li>
<li><p>the First Law of Thermodynamics (E89) (Craig and Gislason, 2002)</p>
</li>
<li><p>the Bermuda Triangle (E53) (Dolan, 2005)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Léonard de Vinci (<code class="language-plaintext highlighter-rouge">E21_Personne</code>) (Strano, 1953)</p>
</li>
<li><p>Le site de Stonehenge (<code class="language-plaintext highlighter-rouge">E24_Chose_matérielle_élaborée_par_l’humain</code>) (Pryor, 2016)</p>
</li>
<li><p>Le trou dans la couche d’ozone (<code class="language-plaintext highlighter-rouge">E4_Période</code>) (Hufford & Horwitz, 2005)</p>
</li>
<li><p>Le premier principe de la thermodynamique (<code class="language-plaintext highlighter-rouge">E89_Objet_propositionnel</code>) (Craig & Gislason, 2002)</p>
</li>
<li><p>Le triangle des Bermudes (<code class="language-plaintext highlighter-rouge">E53_Lieu</code>) (Dolan, 2005)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<ul>
<li><p>E77(x) ⇒ E1(x)</p>
</li>
</ul>
</td>
<td>
<p>E77(x) ⇒ E1(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
